# bareClient

./: .pylintrc  README.md  development.md  mkdocs.yml  mypy.ini  punch_config.py  pyproject.toml  requirements.txt  requirements_doc.txt  setup.py  versions.json
4.6/: 404.html  index.html
4.6/api/bareclient/: index.html
4.6/user-guide/getting-started/: index.html
4.6/user-guide/http-protocols/: index.html
4.6/user-guide/installation/: index.html
5.0/: 404.html  index.html  sitemap.xml
bareclient/: __init__.py  client.py  compression.py  config.py  connection.py  connector.py  constants.py  errors.py  helpers.py  middleware.py  py.typed  request.py  requester.py  response.py  session.py  ssl_contexts.py  types.py  unbound_session.py  utils.py
bareclient/acgi/: README.md  __init__.py  asyncio_events.py  connector.py  h11_protocol.py  h2_protocol.py  http_protocol.py  requester.py  types.py  utils.py
bareclient/middlewares/: __init__.py  basic_authorization.py  compression.py  session.py
demos/: basic_auth.py  form_post.py  get_h2.py  helper_get_json.py  helper_get_text.py  helper_post_json.py  session_get.py  simple_compressed.py  simple_compression.py  simple_get.py  simple_get_h2.py  simple_json.py  simple_middleware.py  simple_post.py  simple_producer.py  simple_proxy.py  simple_session.py
docs/: 404.html  Makefile  api.rst  conf.py  index.html  index.md  index.rst  make.bat  sitemap.xml
docs/api/: bareclient.md
docs/search/: search_index.json
docs/user-guide/: compression.md  getting-started.md  http-protocols.md  installation.md  middleware.md  requests.md  responses.md  session.md  ssl.md
documentation/: index.md
documentation/api/: bareclient.md
documentation/user-guide/: client.md  compression.md  getting-started.md  http-protocols.md  installation.md  middleware.md  requests.md  responses.md  session.md  ssl.md  usage.md
src/bareclient/: __init__.py  background_manager.py  client.py  connector.py  constants.py  h11_protocol.py  h11_requester.py  h2_protocol.py  h2_requester.py  header.py  helpers.py  http_protocol.py  main.py  requester.py  session.py  socket_reader.py  stream.py  streaming.py  timeout.py  types.py  unbound_session.py  utils.py
tests/: test_types.py  test_utils.py
tests/acgi/: test_asyncio_events.py  test_requester.py  test_utils.py
tests/middlewares/: test_session.py
(+50 files in other folders)
