[tool.poetry]
name = "bareclient"
version = "5.0.0-alpha.6"
description = "A lightweight asyncio HTTP client"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareclient" }
]
repository = "https://github.com/rob-blackbourn/bareClient"

[tool.poetry.dependencies]
python = "^3.7"
bareutils = "^4.0.0-alpha.0"
h11 = "^0.12.0"
h2 = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.8"
mypy = "^0.910"
autopep8 = "^1.4"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.6"
types-setuptools = "^57.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
