[tool.poetry]
name = "bareclient"
version = "5.0.1"
description = "A lightweight asyncio HTTP client"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareclient" }
]
repository = "https://github.com/rob-blackbourn/bareClient"

[tool.poetry.dependencies]
python = "^3.7"
bareutils = "^4.0.0"
h11 = "^0.12.0"
h2 = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.8"
mypy = "^0.910"
autopep8 = "^1.4"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
types-setuptools = "^57.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
