[tool.poetry]
name = "bareclient"
version = "6.0.0a1"
description = "A lightweight asyncio HTTP client"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "bareclient" }]
repository = "https://github.com/rob-blackbourn/bareClient"

[tool.poetry.dependencies]
python = "^3.11"
bareutils = "^4.0.2"
h11 = "^0.12"
h2 = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.8"
mypy = "^1.2"
autopep8 = "^1.4"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
types-setuptools = "^67.7"
httpx = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
